# ferrix

./: .gitignore  AGENTS.md  Cargo.toml  README.md  bench.py  main.py  pyproject.toml  test_ferrix.py
.github/workflows/: release.yml
src/: lib.rs  python.rs  tests.rs
src/tests/: arithmetic.rs  creation.rs  indexing.rs  masking.rs  mod.rs  reshaping.rs  slicing.rs  transposing.rs
