
[project]
name = "ferrix"
version = "0.1.0"
description = "A fast tensor library in Rust"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "maturin>=1.12.6",
    "numpy>=1.24.4",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.maturin.env]
PYO3_USE_ABI3_FORWARD_COMPATIBILITY = "1"
